--- a/src/components/ClientList/ClientList.css
+++ b/src/components/ClientList/ClientList.css
@@ -50,8 +50,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 32px;
+  font-size: 22px;
   font-weight: 700;
+  letter-spacing: 0.5px;
 }
 
 .client-list__name {
@@ -75,7 +76,7 @@
   .client-list__avatar {
     width: 60px;
     height: 60px;
-    font-size: 24px;
+    font-size: 16px;
   }
 
   .client-list__name {
